compiler/testData/cli/jvm/forbidKotlinPackageK1.out
compiler/testData/cli/jvm/forbidKotlinPackage.kt:4:1: error: only the Kotlin standard library is allowed to use the 'kotlin' package
package kotlin.internal
^
COMPILATION_ERROR
